Fix file (image) alignment issue if original smaller than width
While testing, noticed that a certain image, with the File width
option set to "Full width", was always left aligned, regardless of the
File position setting. Turns out that the original image is smaller
than the width of a parent <div> which controls the width on the screen
(specified by the File width option). Trying different options
via inspect in Chrome, came up with the CSS changes associated with
this commit - basically, use text-align on a child <div> of the
aforementioned <div>
This bug was not noticed before because most images have a higher
resolution, and therefore fill completely the parent <div> which
controls the width.

--- a/views/shared/exhibit_layouts/cul-file-no-text/layout.css
+++ b/views/shared/exhibit_layouts/cul-file-no-text/layout.css
@@ -65,3 +65,16 @@
 .layout-cul-file-no-text .exhibit-items.quarterwidth{
   width: 25%;
 }
+
+.layout-cul-file-no-text .exhibit-items.center .exhibit-item {
+  text-align: center;
+}
+
+.layout-cul-file-no-text .exhibit-items.left .exhibit-item {
+  text-align: left;
+}
+
+.layout-cul-file-no-text .exhibit-items.right .exhibit-item {
+  text-align: right;
+}
+
